# sample-app-ci-cd

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: sample-app.yaml
app/: main.py
helm/: Chart.yaml  README.md  app-readme.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
